Fix display of select menu on dark mode, and improve list of names display

--- a/src/Styles/home.scss
+++ b/src/Styles/home.scss
@@ -38,7 +38,7 @@
 .select-container{
     .Select__control{
         cursor: pointer;
-        min-width: 210px;
+        min-width: 180px;
         min-height: 20px;
         border-width: 2px;
         border-radius: 1.5em;
@@ -60,7 +60,7 @@
     }
     .Select__option{
         cursor: pointer;
-        padding: 2%;
+        padding: 2% 5.5%;
         &--is-focused{
             background: rgba(66, 66, 234, 0.25);
         }
@@ -70,6 +70,9 @@
         &:active{
             background: rgba(66, 66, 234, 0.5);
         }
+    }
+    .Select__menu{
+        box-shadow: 0 0 10px 0 lightgray;
     }
 }
 
@@ -108,24 +111,27 @@
         display: grid;
         grid-template-columns: repeat(4, auto);
         column-gap: 2%;
+        row-gap: .2%;
         padding: 0 3%;
     }
     &__pictures{
         display: grid;
         grid-template-columns: repeat(4, auto);
         column-gap: 2%;
-        padding: 0 3%;
+        row-gap: .2%;
+        padding: 1% 3%;
+        place-items: center;
     }
     &__names{
         display: grid;
         grid-template-columns: repeat(6, auto);
         column-gap: 2%;
-        padding: 0 3%;
+        row-gap: 5%;
+        padding: 1% 3%;
     }
 }
 
 .card{
-    margin-bottom: 9%;
     padding: 4% 0;
     display: grid;
     grid-template-rows: repeat(3, auto);
@@ -159,17 +165,20 @@
 }
 
 .picture-card{
-    margin-bottom: 9%;
     img{
         border-radius: 50%;
+        box-shadow: 0 0 10px 0 lightgray;
     }
 }
 
 .name-card{
     text-align: center;
-    margin-bottom: 9%;
     .link{
+        border-radius: 1.5em;
+        padding: 5%;
         text-decoration: none;
+        color: white;
+        box-shadow: 0 0 10px 0 lightgray;
     }
 }
 
@@ -177,12 +186,18 @@
     .profiles-section{
         &__cards{
             grid-template-columns: repeat(2, auto);
+            row-gap: .03%;
+            padding: 3%;
         }
         &__pictures{
             grid-template-columns: repeat(3, auto);
+            row-gap: .01%;
+            padding: 3%;
         }
         &__names{
             grid-template-columns: repeat(2, auto);
+            row-gap: 1%;
+            padding: 3%;
         }
     }
 
@@ -195,7 +210,6 @@
     }
 
     .card{
-        margin: 3% 0;
         font-size: .92em;
     }
 
